added alt tag to image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          <h2>and yet again</h2> 
         <!-- I added the h1 here so I can easily check if I made changes, simply by filling this in -->  
          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2851 3548">
-  <image width="2851" height="3548" xlink:href="src/home.jpg"></image> <a xlink:href="https://www.astridlindgren.com/characters/the-children-of-noisy-village" target="_blank"> 
+  <image width="2851" height="3548" xlink:href="src/home.jpg" alt="image of a decision tree"></image> <a xlink:href="https://www.astridlindgren.com/characters/the-children-of-noisy-village" target="_blank"> 
     <rect x="151" y="346" fill="#fff" opacity="0" width="436" height="306"></rect>
   </a><a xlink:href="https://vimeo.com/745506689?embedded=true&amp;source=vimeo_logo&amp;owner=13439285" target="_blank">
     <rect x="92" y="1209" fill="#fff" opacity="0" width="479" height="327"></rect>
@@ -52,8 +52,6 @@
     <rect x="2274" y="2671" fill="#fff" opacity="0" width="464" height="337"></rect>
   </a><a xlink:href="https://www.katalog-barbaraiweins.com/#images" target="_blank">
     <rect x="1849" y="3057" fill="#fff" opacity="0" width="473" height="245"></rect>
-  </a>
-</svg>
   </a>
 </svg>
     </div>
