added substack subscription link

--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
     <rect x="2110" y="287" fill="#fff" opacity="0" width="212" height="169"></rect>
   </a>
 </svg>
-         <h2>message me</h2> 
-         <h2>I want more!</h2> 
-         <h2>more monthly in your inbox</h2> 
+         <a href="https://artateverycorner.substack.com/about"><h2>I want this <br> monthly <br> in my inbox</h2> </a>
      </div>
     <script src="src/index.js"></script>
   </body>
