--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <body>
     <div class="container">
       <div class="weather-app-wrapper">
-        <h1>hello world</h1>
+        <h1>Art is everywhere <br> in all different forms and shapes</h1>
+        <h2> Follow the path <br> Click on the result <br> Discover something new</h2>
         <!-- I added the h1 here so I can easily check if I made changes, simply by filling this in -->  
          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3024 4032">
   <image width="3024" height="4032" xlink:href="src/home.jpg" alt="image of a decision tree"></image> <a xlink:href="https://www.astridlindgren.com/characters/the-children-of-noisy-village" target="_blank">
